@@ -1,17 +1,52 @@
 package de.tum.in.www1.artemis.domain;
 
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jakarta.annotation.Nullable;
-import jakarta.persistence.*;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.CollectionTable;
+import jakarta.persistence.Column;
+import jakarta.persistence.DiscriminatorColumn;
+import jakarta.persistence.DiscriminatorType;
+import jakarta.persistence.DiscriminatorValue;
+import jakarta.persistence.ElementCollection;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.Inheritance;
+import jakarta.persistence.InheritanceType;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.OneToOne;
+import jakarta.persistence.Table;
+import jakarta.persistence.Transient;
 
 import org.hibernate.annotations.Cache;
 import org.hibernate.annotations.CacheConcurrencyStrategy;
 
-import com.fasterxml.jackson.annotation.*;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonIncludeProperties;
+import com.fasterxml.jackson.annotation.JsonSubTypes;
+import com.fasterxml.jackson.annotation.JsonTypeInfo;
+import com.fasterxml.jackson.annotation.JsonView;
 
 import de.tum.in.www1.artemis.domain.competency.Competency;
 import de.tum.in.www1.artemis.domain.enumeration.ExerciseType;
@@ -606,7 +641,7 @@ public abstract class Exercise extends BaseExercise implements LearningObject {
 
         if (!submissionsWithRatedResult.isEmpty()) {
             if (submissionsWithRatedResult.size() == 1) {
-                return submissionsWithRatedResult.get(0);
+                return submissionsWithRatedResult.getFirst();
             }
             else {
                 // this means we have more than one submission, we want the one with the last submission date
@@ -621,7 +656,7 @@ public abstract class Exercise extends BaseExercise implements LearningObject {
                 return null;
             }
             if (submissionsWithUnratedResult.size() == 1) {
-                return submissionsWithUnratedResult.get(0);
+                return submissionsWithUnratedResult.getFirst();
             }
             else { // this means with have more than one submission, we want the one with the last submission date
                    // make sure that submissions without submission date do not lead to null pointer exception in the comparison
@@ -630,7 +665,7 @@ public abstract class Exercise extends BaseExercise implements LearningObject {
         }
         else if (!submissionsWithoutResult.isEmpty()) {
             if (submissionsWithoutResult.size() == 1) {
-                return submissionsWithoutResult.get(0);
+                return submissionsWithoutResult.getFirst();
             }
             else { // this means with have more than one submission, we want the one with the last submission date
                    // make sure that submissions without submission date do not lead to null pointer exception in the comparison
